# spacenote

./: .dockerignore  .env.example  .env.worktree.example  .gitignore  CLAUDE.md  README.md  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  justfile  pyproject.toml
apps/backend/src/spacenote/: app.py  config.py  errors.py  logging.py  main.py
apps/backend/src/spacenote/core/: core.py  db.py  pagination.py  schema.py  service.py
apps/backend/src/spacenote/core/modules/access/: service.py
apps/backend/src/spacenote/core/modules/attachment/: metadata.py  models.py  service.py  storage.py
apps/backend/src/spacenote/core/modules/backup/: models.py  service.py
apps/backend/src/spacenote/core/modules/comment/: __init__.py  models.py  service.py
apps/backend/src/spacenote/core/modules/counter/: __init__.py  models.py  service.py
apps/backend/src/spacenote/core/modules/export/: __init__.py  models.py  service.py
apps/backend/src/spacenote/core/modules/field/: __init__.py  models.py  service.py  validators.py
apps/backend/src/spacenote/core/modules/filter/: __init__.py  adhoc.py  models.py  query_builder.py  service.py  validators.py
apps/backend/src/spacenote/core/modules/image/: __init__.py  exif.py  processor.py  service.py  storage.py
apps/backend/src/spacenote/core/modules/log/: models.py  service.py
apps/backend/src/spacenote/core/modules/note/: __init__.py  models.py  service.py
apps/backend/src/spacenote/core/modules/session/: __init__.py  models.py  service.py
apps/backend/src/spacenote/core/modules/space/: __init__.py  models.py  service.py
apps/backend/src/spacenote/core/modules/telegram/: bot.py  models.py  sender.py  service.py  utils.py
apps/backend/src/spacenote/core/modules/template/: __init__.py  defaults.py  service.py
apps/backend/src/spacenote/web/: deps.py  error_handlers.py  middlewares.py  openapi.py  runner.py  server.py
apps/backend/src/spacenote/web/routers/: __init__.py  attachments.py  auth.py  backups.py  comments.py  exports.py  fields.py  filters.py  images.py  logs.py  notes.py  profile.py  spaces.py  telegram.py  templates.py  users.py
apps/backend/tests/: conftest.py
backend/: justfile  (+1 more)
(+655 files in other folders)
